# bridgeAI-regression-model-data-ingestion

./: Dockerfile  README.md  config.yaml  pyproject.toml
.dvc/: config
.github/workflows/: release.yml  test.yml
artefacts/: .gitignore  test_data.csv.dvc  train_data.csv.dvc  val_data.csv.dvc
src/: data_cleansing.py  data_gathering.py  data_push.py  data_splitting.py  main.py  utils.py
tests/: test_data_gathering.py  test_data_push.py  test_data_splitting.py  test_integration_dvc.py
